# AdaClaw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  config.example.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
Formula/: adaclaw.rb
crates/adaclaw-channels/: Cargo.toml
crates/adaclaw-channels/src/: base.rs  cli.rs  dingtalk.rs  discord.rs  email.rs  error.rs  feishu.rs  lib.rs  manager.rs  matrix.rs  slack.rs  telegram.rs  webhook.rs  wechat_work.rs  whatsapp.rs
crates/adaclaw-core/: Cargo.toml
crates/adaclaw-core/src/: channel.rs  lib.rs  memory.rs  observer.rs  provider.rs  sandbox.rs  tool.rs  transcribe.rs  tunnel.rs
crates/adaclaw-memory/: Cargo.toml
crates/adaclaw-memory/src/: consolidation.rs  error.rs  factory.rs  global.rs  lib.rs  markdown.rs  none.rs  query.rs  rrf.rs  session_store.rs  sqlite.rs  topic.rs
crates/adaclaw-memory/src/embeddings/: fastembed.rs  mod.rs  none.rs  openai.rs
crates/adaclaw-providers/: Cargo.toml
crates/adaclaw-providers/src/: anthropic.rs  deepseek.rs  error.rs  groq.rs  lib.rs  ollama.rs  openai.rs  openai_compat.rs  openai_proto.rs  openrouter.rs  registry.rs  reliable.rs  router.rs
crates/adaclaw-security/: Cargo.toml
crates/adaclaw-security/src/: approval.rs  audit.rs  estop.rs  lib.rs  otp.rs  ratelimit.rs  sandbox.rs  scrub.rs  secrets.rs  ssrf.rs
crates/adaclaw-security/src/sandbox/: docker.rs  landlock.rs  workspace.rs
crates/adaclaw-server/: Cargo.toml
crates/adaclaw-server/src/: lib.rs  middleware.rs  pairing.rs  server.rs
crates/adaclaw-server/src/routes/: chat.rs  metrics.rs  mod.rs  status.rs  stop.rs  whatsapp.rs
crates/adaclaw-tools/: Cargo.toml
crates/adaclaw-tools/src/: error.rs  file.rs  http.rs  lib.rs  memory_tools.rs  registry.rs  shell.rs
crates/adaclaw-tools/src/mcp/: http.rs  loader.rs  mod.rs  stdio.rs
docs/: email-setup.md  heartbeat.md  matrix-setup.md  mcp.md  voice-transcription.md  whatsapp-setup.md
scripts/: install.ps1  install.sh
src/: main.rs
src/agents/: compact.rs  delegate.rs  engine.rs  instance.rs  message_tool.rs  mod.rs  parser.rs  prompt.rs  registry.rs
src/bus/: mod.rs  queue.rs  router.rs
src/cli/: doctor.rs  mod.rs  onboard.rs  skill.rs
src/config/: migration.rs  mod.rs  schema.rs  validation.rs
src/cron/: scheduler.rs
src/daemon/: mod.rs  reload.rs  run.rs
src/identity/: loader.rs  mod.rs
src/observability/: log.rs  mod.rs  noop.rs  prometheus.rs  trace.rs
src/skills/: loader.rs  mod.rs
src/state/: mod.rs
src/tunnel/: cloudflare.rs  mod.rs  ngrok.rs  tailscale.rs
