[package]
name = "adaclaw-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
adaclaw-core = { path = "../adaclaw-core" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "sync"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"

# ── Telegram signature verification ──────────────────────────────────────────
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.10"

# ── Webhook channels (DingTalk, Feishu, WeCom, Slack, generic) ───────────────
axum = "0.7"
tokio-util = "0.7"

# ── Discord / Slack Socket Mode (WebSocket) ───────────────────────────────────
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# ── WeCom AES-CBC message decryption ──────────────────────────────────────────
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha1 = "0.10"

# ── DingTalk timestamp signing ────────────────────────────────────────────────
chrono = "0.4"
