[package]
name = "adaclaw-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Matrix Client-Server API 支持（使用 reqwest 实现，无额外依赖）
matrix = []

[dependencies]
adaclaw-core = { path = "../adaclaw-core", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "sync"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
# Phase 14-P0-2: structured error types for library crate
thiserror = "1.0"

# ── Telegram signature verification ──────────────────────────────────────────
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.10"

# ── Webhook channels (DingTalk, Feishu, WeCom, Slack, generic, WhatsApp) ──────
axum = "0.7"
tokio-util = "0.7"

# ── Discord / Slack Socket Mode (WebSocket) ───────────────────────────────────
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# ── WeCom AES-CBC message decryption ──────────────────────────────────────────
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha1 = "0.10"

# ── DingTalk timestamp signing ────────────────────────────────────────────────
chrono = "0.4"

# ── Email channel (IMAP polling + SMTP) ───────────────────────────────────────
# imap：同步 IMAP 客户端 v2（stable），via spawn_blocking
imap = "2.4"
# native-tls：imap::connect 需要显式传入 TlsConnector
native-tls = "0.2"
# mailparse：MIME/RFC822 邮件解析
mailparse = "0.14"
# lettre：同步 SMTP 发信
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }

# ── URL encoding（Matrix channel 路径编码）────────────────────────────────────
urlencoding = "2.1"
