[package]
name = "adaclaw-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable local ONNX embedding via fastembed (AllMiniLML6V2, ~22 MB model download)
fastembed = ["dep:fastembed"]
# Enable OpenAI embedding API (text-embedding-3-small)
openai-embed = ["dep:reqwest"]
# Enable sqlite-vec vector extension (KNN search)
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
adaclaw-core  = { path = "../adaclaw-core", version = "0.1.0" }
anyhow        = "1.0"
async-trait   = "0.1"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
rusqlite      = { version = "0.31", features = ["bundled"] }
tracing       = "0.1"
futures-util  = "0.3"
uuid          = { version = "1", features = ["v4"] }
# Phase 14-P0-2: structured error types for library crate
thiserror     = "1.0"
# Phase 14-P2-1: SQLite connection pool (multiple readers, WAL-safe writers)
r2d2          = "0.8"
r2d2_sqlite   = "0.24"

# Optional: vector extension for sqlite
sqlite-vec   = { version = "0.1", optional = true }

# Optional: local ONNX embedding
fastembed    = { version = "4", optional = true }

# Optional: OpenAI embedding API
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tokio    = { version = "1.36", features = ["full"] }
tempfile = "3"
