[package]
name = "adaclaw-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
adaclaw-core = { path = "../adaclaw-core" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1.36", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread"] }
