[package]
name = "adaclaw-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
adaclaw-core = { path = "../adaclaw-core", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio = { version = "1.36", features = ["time"] }
tracing = "0.1"
# Phase 14-P0-2: structured error types for library crate
thiserror = "1.0"
# Phase 14-P1-2: prevent api_key from appearing in memory dumps / Debug output
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread"] }
