[package]
name = "adaclaw-security"
version = "0.1.0"
edition = "2021"

[dependencies]
adaclaw-core = { path = "../adaclaw-core" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
chacha20poly1305 = "0.10.1"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
hmac = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
