[package]
name = "adaclaw-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
adaclaw-core = { path = "../adaclaw-core", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
chacha20poly1305 = "0.10.1"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }
# Phase 14-B1: SSRF check needs tokio net for DNS resolution
tokio = { version = "1", features = ["sync", "net", "rt"] }
tracing = "0.1"
hmac = "0.12"
sha1 = "0.10"
# Phase 14-P1-2: wrap secret strings so they redact in Debug/log output
secrecy = { version = "0.8", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
