[package]
name = "adaclaw-server"
version = "0.1.0"
edition = "2021"

[dependencies]
adaclaw-core = { path = "../adaclaw-core" }
adaclaw-security = { path = "../adaclaw-security" }
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
rand = "0.8"
