[package]
name = "adaclaw-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
adaclaw-core = { path = "../adaclaw-core", version = "0.1.0" }
adaclaw-security = { path = "../adaclaw-security", version = "0.1.0" }
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
rand = "0.8"

# ── WhatsApp 路由签名验证 ──────────────────────────────────────────────────────
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
