[package]
name = "adaclaw-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
adaclaw-core = { path = "../adaclaw-core" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
