[package]
name = "adaclaw-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
adaclaw-core     = { path = "../adaclaw-core", version = "0.1.0" }
# Phase 14-B1: SSRF protection for http_request tool
adaclaw-security = { path = "../adaclaw-security", version = "0.1.0" }
anyhow           = "1.0"
async-trait      = "0.1"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
toml             = "0.8"
reqwest          = { version = "0.11", features = ["json", "multipart"] }
tokio            = { version = "1.36", features = ["full"] }
tracing          = "0.1"
# Phase 14-P0-2: structured error types for library crate
thiserror        = "1.0"
